| Summary: | ASTERISK-25472: Swagger scripts are not replacing format variable in file brief | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-10-17 09:28:31 | Date Closed: | 2016-08-19 12:56:05 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Rest-api docs are produced including \{format\} variables which appear they should be getting replaced by 'json' but are not. Is this intentional? | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-10-17 09:28:32.356-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||