res/res_ari_recordings.c
@@ -797,7 +797,7 @@ fin: __attribute__((unused))
 	return;
 }
 
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_stored_recordingName_file = {
 	.path_segment = "file",
 	.callbacks = {
@@ -806,7 +806,7 @@ static struct stasis_rest_handlers recordings_stored_recordingName_file = {
 	.num_children = 0,
 	.children = {  }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_stored_recordingName_copy = {
 	.path_segment = "copy",
 	.callbacks = {
@@ -815,7 +815,7 @@ static struct stasis_rest_handlers recordings_stored_recordingName_copy = {
 	.num_children = 0,
 	.children = {  }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_stored_recordingName = {
 	.path_segment = "recordingName",
 	.is_wildcard = 1,
@@ -826,7 +826,7 @@ static struct stasis_rest_handlers recordings_stored_recordingName = {
 	.num_children = 2,
 	.children = { &recordings_stored_recordingName_file,&recordings_stored_recordingName_copy, }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_stored = {
 	.path_segment = "stored",
 	.callbacks = {
@@ -835,7 +835,7 @@ static struct stasis_rest_handlers recordings_stored = {
 	.num_children = 1,
 	.children = { &recordings_stored_recordingName, }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_live_recordingName_stop = {
 	.path_segment = "stop",
 	.callbacks = {
@@ -844,7 +844,7 @@ static struct stasis_rest_handlers recordings_live_recordingName_stop = {
 	.num_children = 0,
 	.children = {  }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_live_recordingName_pause = {
 	.path_segment = "pause",
 	.callbacks = {
@@ -854,7 +854,7 @@ static struct stasis_rest_handlers recordings_live_recordingName_pause = {
 	.num_children = 0,
 	.children = {  }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_live_recordingName_mute = {
 	.path_segment = "mute",
 	.callbacks = {
@@ -864,7 +864,7 @@ static struct stasis_rest_handlers recordings_live_recordingName_mute = {
 	.num_children = 0,
 	.children = {  }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_live_recordingName = {
 	.path_segment = "recordingName",
 	.is_wildcard = 1,
@@ -875,7 +875,7 @@ static struct stasis_rest_handlers recordings_live_recordingName = {
 	.num_children = 3,
 	.children = { &recordings_live_recordingName_stop,&recordings_live_recordingName_pause,&recordings_live_recordingName_mute, }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings_live = {
 	.path_segment = "live",
 	.callbacks = {
@@ -883,7 +883,7 @@ static struct stasis_rest_handlers recordings_live = {
 	.num_children = 1,
 	.children = { &recordings_live_recordingName, }
 };
-/*! \brief REST handler for /api-docs/recordings.{format} */
+/*! \brief REST handler for /api-docs/recordings.json */
 static struct stasis_rest_handlers recordings = {
 	.path_segment = "recordings",
 	.callbacks = {
